added customruntime, icon & step for email & pw